--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,25 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+        android {
+        signingConfigs {
+            debug {
+                storeFile file("E:\\AAAAAAAA\\ShareDemo\\shareDemo.jks")
+                storePassword "qwe123"
+                keyAlias "key0"
+                keyPassword "qwe123"
+            }
+        }
+    }
+        lintOptions {
+            checkReleaseBuilds false
+            // Or, if you prefer, you can continue to check for errors in release builds,
+            // but continue the build even when errors are found:
+            abortOnError false
+        }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -28,8 +47,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     testCompile 'junit:junit:4.12'
     compile project(':simpleshare')
-    compile files('libs/ShareSDK-QQ-3.0.1.jar')
-    compile files('libs/ShareSDK-QZone-3.0.1.jar')
-    compile files('libs/ShareSDK-Wechat-3.0.1.jar')
-    compile files('libs/ShareSDK-Wechat-Core-3.0.1.jar')
+    compile files('libs/ShareSDK-QQ-3.0.2.jar')
+    compile files('libs/ShareSDK-QZone-3.0.2.jar')
+    compile files('libs/ShareSDK-Wechat-3.0.2.jar')
+    compile files('libs/ShareSDK-Wechat-Core-3.0.2.jar')
+    compile files('libs/ShareSDK-Wechat-Moments-3.0.2.jar')
 }
